@@ -1,4 +1,5 @@
 HEAD
+	+ CUPS configuration is saved when backing up
 	+ Override restoreDepends to remove samba
 	+ Added network as dependency of printers
 	+ Include support for HP printers by default
